# cppwc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml  pipeline.yml
include/: WordCount.hpp
src/: WordCount.cpp  main.cpp
tests/: test.cpp
